crates/benday-core/tests/snapshots/corpus__case__hist_auto.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 74,
    "rows": 15
  },
  "plot": {
    "x": 2,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      4.0
    ],
    "step": 1.0,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0",
        "row": 12
      },
      {
        "value": 1.0,
        "frac": 0.25,
        "label": "1",
        "row": 9
      },
      {
        "value": 2.0,
        "frac": 0.5,
        "label": "2",
        "row": 6
      },
      {
        "value": 3.0,
        "frac": 0.75,
        "label": "3",
        "row": 3
      },
      {
        "value": 4.0,
        "frac": 1.0,
        "label": "4",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": null,
    "domain": [
      0.0,
      100.0
    ],
    "tick_cols": [
      0,
      7,
      14,
      22,
      29,
      36,
      43,
      50,
      58,
      65
    ],
    "labels": [
      {
        "text": "0",
        "col": 2,
        "row": 14
      },
      {
        "text": "10",
        "col": 8,
        "row": 14
      },
      {
        "text": "20",
        "col": 15,
        "row": 14
      },
      {
        "text": "30",
        "col": 23,
        "row": 14
      },
      {
        "text": "40",
        "col": 30,
        "row": 14
      },
      {
        "text": "50",
        "col": 37,
        "row": 14
      },
      {
        "text": "60",
        "col": 44,
        "row": 14
      },
      {
        "text": "70",
        "col": 51,
        "row": 14
      },
      {
        "text": "80",
        "col": 59,
        "row": 14
      },
      {
        "text": "90",
        "col": 66,
        "row": 14
      },
      {
        "text": "100",
        "col": 71,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.0,
            "y0": 0.75,
            "w": 0.09722222222222222,
            "h": 0.25,
            "color": "#00c3c4"
          },
          {
            "x0": 0.09722222222222222,
            "y0": 0.75,
            "w": 0.09722222222222222,
            "h": 0.25,
            "color": "#00c3c4"
          },
          {
            "x0": 0.19444444444444445,
            "y0": 0.75,
            "w": 0.1111111111111111,
            "h": 0.25,
            "color": "#00c3c4"
          },
          {
            "x0": 0.3055555555555556,
            "y0": 0.75,
            "w": 0.09722222222222222,
            "h": 0.25,
            "color": "#00c3c4"
          },
          {
            "x0": 0.4027777777777778,
            "y0": 0.25,
            "w": 0.09722222222222222,
            "h": 0.75,
            "color": "#c1cf59"
          },
          {
            "x0": 0.5,
            "y0": 0.0,
            "w": 0.09722222222222222,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.5972222222222222,
            "y0": 0.75,
            "w": 0.09722222222222222,
            "h": 0.25,
            "color": "#00c3c4"
          },
          {
            "x0": 0.6944444444444444,
            "y0": 0.75,
            "w": 0.1111111111111111,
            "h": 0.25,
            "color": "#00c3c4"
          },
          {
            "x0": 0.8055555555555556,
            "y0": 0.75,
            "w": 0.09722222222222222,
            "h": 0.25,
            "color": "#00c3c4"
          },
          {
            "x0": 0.9027777777777778,
            "y0": 0.75,
            "w": 0.09722222222222222,
            "h": 0.25,
            "color": "#00c3c4"
          }
        ],
        "direction": "vertical"
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "latency_ms",
    "y_field": "latency_ms",
    "aggregate": "count",
    "bin": {
      "step": 10.0,
      "domain": [
        0.0,
        100.0
      ],
      "bins": 10
    },
    "series_points": [
      1,
      1,
      1,
      1,
      3,
      4,
      1,
      1,
      1,
      1
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
