crates/benday-core/tests/snapshots/corpus__case__hist_degenerate_span.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 76,
    "rows": 15
  },
  "plot": {
    "x": 4,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      3.0
    ],
    "step": 0.5,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0.0",
        "row": 12
      },
      {
        "value": 0.5,
        "frac": 0.16666666666666666,
        "label": "0.5",
        "row": 10
      },
      {
        "value": 1.0,
        "frac": 0.3333333333333333,
        "label": "1.0",
        "row": 8
      },
      {
        "value": 1.5,
        "frac": 0.5,
        "label": "1.5",
        "row": 6
      },
      {
        "value": 2.0,
        "frac": 0.6666666666666666,
        "label": "2.0",
        "row": 4
      },
      {
        "value": 2.5,
        "frac": 0.8333333333333334,
        "label": "2.5",
        "row": 2
      },
      {
        "value": 3.0,
        "frac": 1.0,
        "label": "3.0",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": null,
    "domain": [
      42.0,
      43.0
    ],
    "tick_cols": [
      0,
      7,
      14,
      22,
      29,
      36,
      43,
      50,
      58,
      65
    ],
    "labels": [
      {
        "text": "42.0",
        "col": 2,
        "row": 14
      },
      {
        "text": "42.1",
        "col": 9,
        "row": 14
      },
      {
        "text": "42.2",
        "col": 16,
        "row": 14
      },
      {
        "text": "42.3",
        "col": 24,
        "row": 14
      },
      {
        "text": "42.4",
        "col": 31,
        "row": 14
      },
      {
        "text": "42.5",
        "col": 38,
        "row": 14
      },
      {
        "text": "42.6",
        "col": 45,
        "row": 14
      },
      {
        "text": "42.7",
        "col": 52,
        "row": 14
      },
      {
        "text": "42.8",
        "col": 60,
        "row": 14
      },
      {
        "text": "42.9",
        "col": 67,
        "row": 14
      },
      {
        "text": "43.0",
        "col": 72,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.0,
            "y0": 0.0,
            "w": 0.09722222222222222,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.09722222222222222,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.19444444444444445,
            "y0": 1.0,
            "w": 0.1111111111111111,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.3055555555555556,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.4027777777777778,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.5,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.5972222222222222,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.6944444444444444,
            "y0": 1.0,
            "w": 0.1111111111111111,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.8055555555555556,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.9027777777777778,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          }
        ],
        "direction": "vertical"
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "v",
    "y_field": "v",
    "aggregate": "count",
    "bin": {
      "step": 0.1,
      "domain": [
        42.0,
        43.0
      ],
      "bins": 10
    },
    "series_points": [
      3,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
