crates/benday-core/tests/snapshots/corpus__case__hist_dirty_declared.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 76,
    "rows": 15
  },
  "plot": {
    "x": 4,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      1.0
    ],
    "step": 0.5,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0.0",
        "row": 12
      },
      {
        "value": 0.5,
        "frac": 0.5,
        "label": "0.5",
        "row": 6
      },
      {
        "value": 1.0,
        "frac": 1.0,
        "label": "1.0",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": null,
    "domain": [
      10.0,
      55.0
    ],
    "tick_cols": [
      0,
      8,
      16,
      24,
      32,
      40,
      48,
      56,
      64
    ],
    "labels": [
      {
        "text": "10",
        "col": 3,
        "row": 14
      },
      {
        "text": "15",
        "col": 11,
        "row": 14
      },
      {
        "text": "20",
        "col": 19,
        "row": 14
      },
      {
        "text": "25",
        "col": 27,
        "row": 14
      },
      {
        "text": "30",
        "col": 35,
        "row": 14
      },
      {
        "text": "35",
        "col": 43,
        "row": 14
      },
      {
        "text": "40",
        "col": 51,
        "row": 14
      },
      {
        "text": "45",
        "col": 59,
        "row": 14
      },
      {
        "text": "50",
        "col": 67,
        "row": 14
      },
      {
        "text": "55",
        "col": 74,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.0,
            "y0": 0.0,
            "w": 0.1111111111111111,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.1111111111111111,
            "y0": 0.0,
            "w": 0.1111111111111111,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.2222222222222222,
            "y0": 1.0,
            "w": 0.1111111111111111,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.3333333333333333,
            "y0": 0.0,
            "w": 0.1111111111111111,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.4444444444444444,
            "y0": 0.0,
            "w": 0.1111111111111111,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.5555555555555556,
            "y0": 1.0,
            "w": 0.1111111111111111,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.6666666666666666,
            "y0": 0.0,
            "w": 0.1111111111111111,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.7777777777777778,
            "y0": 0.0,
            "w": 0.1111111111111111,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.8888888888888888,
            "y0": 0.0,
            "w": 0.1111111111111111,
            "h": 1.0,
            "color": "#ffc151"
          }
        ],
        "direction": "vertical"
      }
    }
  ],
  "dropped_rows": 1,
  "source": {
    "mark": "bar",
    "x_field": "v",
    "y_field": "v",
    "aggregate": "count",
    "bin": {
      "step": 5.0,
      "domain": [
        10.0,
        55.0
      ],
      "bins": 9
    },
    "series_points": [
      1,
      1,
      0,
      1,
      1,
      0,
      1,
      1,
      1
    ],
    "data_source": "inline_columns",
    "truncated": null,
    "total_rows": null
  }
}
