crates/benday-core/tests/snapshots/corpus__case__hist_empty_bins_count.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 74,
    "rows": 15
  },
  "plot": {
    "x": 2,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      6.0
    ],
    "step": 2.0,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0",
        "row": 12
      },
      {
        "value": 2.0,
        "frac": 0.3333333333333333,
        "label": "2",
        "row": 8
      },
      {
        "value": 4.0,
        "frac": 0.6666666666666666,
        "label": "4",
        "row": 4
      },
      {
        "value": 6.0,
        "frac": 1.0,
        "label": "6",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": null,
    "domain": [
      0.0,
      100.0
    ],
    "tick_cols": [
      0,
      7,
      14,
      22,
      29,
      36,
      43,
      50,
      58,
      65
    ],
    "labels": [
      {
        "text": "0",
        "col": 2,
        "row": 14
      },
      {
        "text": "10",
        "col": 8,
        "row": 14
      },
      {
        "text": "20",
        "col": 15,
        "row": 14
      },
      {
        "text": "30",
        "col": 23,
        "row": 14
      },
      {
        "text": "40",
        "col": 30,
        "row": 14
      },
      {
        "text": "50",
        "col": 37,
        "row": 14
      },
      {
        "text": "60",
        "col": 44,
        "row": 14
      },
      {
        "text": "70",
        "col": 51,
        "row": 14
      },
      {
        "text": "80",
        "col": 59,
        "row": 14
      },
      {
        "text": "90",
        "col": 66,
        "row": 14
      },
      {
        "text": "100",
        "col": 71,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.0,
            "y0": 0.16666666666666663,
            "w": 0.09722222222222222,
            "h": 0.8333333333333334,
            "color": "#dccb4d"
          },
          {
            "x0": 0.09722222222222222,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.19444444444444445,
            "y0": 1.0,
            "w": 0.1111111111111111,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.3055555555555556,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.4027777777777778,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.5,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.5972222222222222,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.6944444444444444,
            "y0": 1.0,
            "w": 0.1111111111111111,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.8055555555555556,
            "y0": 1.0,
            "w": 0.09722222222222222,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.9027777777777778,
            "y0": 0.33333333333333337,
            "w": 0.09722222222222222,
            "h": 0.6666666666666666,
            "color": "#a5d16a"
          }
        ],
        "direction": "vertical"
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "latency_ms",
    "y_field": "latency_ms",
    "aggregate": "count",
    "bin": {
      "step": 10.0,
      "domain": [
        0.0,
        100.0
      ],
      "bins": 10
    },
    "series_points": [
      5,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      4
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
