crates/benday-core/tests/snapshots/corpus__case__hist_gap_mean.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 76,
    "rows": 15
  },
  "plot": {
    "x": 4,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      300.0
    ],
    "step": 50.0,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0",
        "row": 12
      },
      {
        "value": 50.0,
        "frac": 0.16666666666666666,
        "label": "50",
        "row": 10
      },
      {
        "value": 100.0,
        "frac": 0.3333333333333333,
        "label": "100",
        "row": 8
      },
      {
        "value": 150.0,
        "frac": 0.5,
        "label": "150",
        "row": 6
      },
      {
        "value": 200.0,
        "frac": 0.6666666666666666,
        "label": "200",
        "row": 4
      },
      {
        "value": 250.0,
        "frac": 0.8333333333333334,
        "label": "250",
        "row": 2
      },
      {
        "value": 300.0,
        "frac": 1.0,
        "label": "300",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": null,
    "domain": [
      0.0,
      100.0
    ],
    "tick_cols": [
      0,
      7,
      14,
      22,
      29,
      36,
      43,
      50,
      58,
      65
    ],
    "labels": [
      {
        "text": "0",
        "col": 4,
        "row": 14
      },
      {
        "text": "10",
        "col": 10,
        "row": 14
      },
      {
        "text": "20",
        "col": 17,
        "row": 14
      },
      {
        "text": "30",
        "col": 25,
        "row": 14
      },
      {
        "text": "40",
        "col": 32,
        "row": 14
      },
      {
        "text": "50",
        "col": 39,
        "row": 14
      },
      {
        "text": "60",
        "col": 46,
        "row": 14
      },
      {
        "text": "70",
        "col": 53,
        "row": 14
      },
      {
        "text": "80",
        "col": 61,
        "row": 14
      },
      {
        "text": "90",
        "col": 68,
        "row": 14
      },
      {
        "text": "100",
        "col": 73,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.0,
            "y0": 0.8333333333333334,
            "w": 0.09722222222222222,
            "h": 0.16666666666666666,
            "color": "#00bcd0"
          },
          {
            "x0": 0.09722222222222222,
            "y0": 0.7833333333333333,
            "w": 0.09722222222222222,
            "h": 0.21666666666666667,
            "color": "#00c0c9"
          },
          {
            "x0": 0.8055555555555556,
            "y0": 0.33333333333333337,
            "w": 0.09722222222222222,
            "h": 0.6666666666666666,
            "color": "#a5d16a"
          },
          {
            "x0": 0.9027777777777778,
            "y0": 0.08333333333333337,
            "w": 0.09722222222222222,
            "h": 0.9166666666666666,
            "color": "#f4c749"
          }
        ],
        "direction": "vertical"
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "size_bytes",
    "y_field": "latency_ms",
    "aggregate": "mean",
    "bin": {
      "step": 10.0,
      "domain": [
        0.0,
        100.0
      ],
      "bins": 10
    },
    "series_points": [
      1,
      2,
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      2
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
