crates/benday-core/tests/snapshots/corpus__case__hist_maxbins.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 76,
    "rows": 15
  },
  "plot": {
    "x": 4,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      3.0
    ],
    "step": 0.5,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0.0",
        "row": 12
      },
      {
        "value": 0.5,
        "frac": 0.16666666666666666,
        "label": "0.5",
        "row": 10
      },
      {
        "value": 1.0,
        "frac": 0.3333333333333333,
        "label": "1.0",
        "row": 8
      },
      {
        "value": 1.5,
        "frac": 0.5,
        "label": "1.5",
        "row": 6
      },
      {
        "value": 2.0,
        "frac": 0.6666666666666666,
        "label": "2.0",
        "row": 4
      },
      {
        "value": 2.5,
        "frac": 0.8333333333333334,
        "label": "2.5",
        "row": 2
      },
      {
        "value": 3.0,
        "frac": 1.0,
        "label": "3.0",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": null,
    "domain": [
      0.0,
      100.0
    ],
    "tick_cols": [
      0,
      14,
      29,
      43,
      58
    ],
    "labels": [
      {
        "text": "0",
        "col": 4,
        "row": 14
      },
      {
        "text": "20",
        "col": 17,
        "row": 14
      },
      {
        "text": "40",
        "col": 32,
        "row": 14
      },
      {
        "text": "60",
        "col": 46,
        "row": 14
      },
      {
        "text": "80",
        "col": 61,
        "row": 14
      },
      {
        "text": "100",
        "col": 73,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.0,
            "y0": 0.33333333333333337,
            "w": 0.19444444444444445,
            "h": 0.6666666666666666,
            "color": "#a5d16a"
          },
          {
            "x0": 0.19444444444444445,
            "y0": 0.33333333333333337,
            "w": 0.20833333333333334,
            "h": 0.6666666666666666,
            "color": "#a5d16a"
          },
          {
            "x0": 0.4027777777777778,
            "y0": 0.33333333333333337,
            "w": 0.19444444444444445,
            "h": 0.6666666666666666,
            "color": "#a5d16a"
          },
          {
            "x0": 0.5972222222222222,
            "y0": 0.0,
            "w": 0.20833333333333334,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.8055555555555556,
            "y0": 0.33333333333333337,
            "w": 0.19444444444444445,
            "h": 0.6666666666666666,
            "color": "#a5d16a"
          }
        ],
        "direction": "vertical"
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "payload_size",
    "y_field": "payload_size",
    "aggregate": "count",
    "bin": {
      "step": 20.0,
      "domain": [
        0.0,
        100.0
      ],
      "bins": 5
    },
    "series_points": [
      2,
      2,
      2,
      3,
      2
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
