crates/benday-core/tests/snapshots/corpus__case__horizontal_count.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 83,
    "rows": 7
  },
  "plot": {
    "x": 11,
    "y": 0,
    "w": 72,
    "h": 5
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      2.0
    ],
    "step": 1.0,
    "categories": [
      "cardiology",
      "oncology",
      "neurology"
    ],
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "cardiology",
        "row": 0
      },
      {
        "value": 1.0,
        "frac": 0.5,
        "label": "oncology",
        "row": 2
      },
      {
        "value": 2.0,
        "frac": 1.0,
        "label": "neurology",
        "row": 4
      }
    ]
  },
  "x_axis": {
    "categories": null,
    "domain": [
      0.0,
      3.0
    ],
    "tick_cols": [
      0,
      12,
      24,
      36,
      47,
      59,
      71
    ],
    "labels": [
      {
        "text": "0.0",
        "col": 10,
        "row": 6
      },
      {
        "text": "0.5",
        "col": 22,
        "row": 6
      },
      {
        "text": "1.0",
        "col": 34,
        "row": 6
      },
      {
        "text": "1.5",
        "col": 46,
        "row": 6
      },
      {
        "text": "2.0",
        "col": 57,
        "row": 6
      },
      {
        "text": "2.5",
        "col": 69,
        "row": 6
      },
      {
        "text": "3.0",
        "col": 80,
        "row": 6
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.0,
            "y0": 0.0,
            "w": 1.0,
            "h": 0.2,
            "color": "#ffc151"
          },
          {
            "x0": 0.0,
            "y0": 0.4,
            "w": 0.6666666666666666,
            "h": 0.2,
            "color": "#a5d16a"
          },
          {
            "x0": 0.0,
            "y0": 0.8,
            "w": 0.3333333333333333,
            "h": 0.2,
            "color": "#21c9b5"
          }
        ],
        "direction": "horizontal"
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "n",
    "y_field": "dept",
    "aggregate": "count",
    "series_points": [
      3,
      2,
      1
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
